--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://kissourene.github.io/logup.git",
+  "homepage":"https://react-jeanoli-git-main-jeaneigsis-projects.vercel.app/",
   "name": "logup",
   "version": "0.1.0",
   "private": true,
